--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
   "dependencies": {
     "bootstrap": "^5.0.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "node-sass": "^6.0.1",
+    "nodemon": "^2.0.12"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "purge": "purgecss --css css/main.css --content index.html --output css/index_redu.css"
+    "purge": "purgecss --css css/main.css --content index.html --output css/index_redu.css",
+    "build-css": "node-sass --include-path scss scss/main.scss css/main.css",
+    "watch-css": "nodemon -e scss -x \"npm run build-css\""
+
   },
   "keywords": [],
   "author": "",
